--- a/index.html
+++ b/index.html
@@ -1,110 +1,58 @@
----
-layout: default
----
-{% for post in paginator.posts %}
-<article class="desc-post">
-	<!--标题-->
-		<a href="{{ site.BASE_PATH }}{{ post.url }}"><h1>{{ post.title }}</h1></a>
-	<!--日期-->
-	<div class="desc">
-		<i class="fa fa-user"></i>
-		<a href="/about/">{{ site.username }}</a>
-		&nbsp;&nbsp;
-		<i class="fa fa-calendar"></i>
-		{% assign d = post.date | date: "%d" | plus:'0' %}
-		<a href="/archive/">{{ post.date | date: "%Y" }}/{{ post.date | date: "%m" }}/{{ post.date | date: "%d" }}</a>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Ly2513.GitHub.com by ly2513</title>
 
-		&nbsp;&nbsp;
-		<i class="fa fa-folder-open-o"></i>
-		<a href="/category/">{{ post.categories }} > {{ post.title }}</a>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Ly2513.GitHub.com</h1>
+        <p>liyongweb.com</p>
 
-	</div>
 
-	<!--文章摘要-->
-	{% if post.fullview %}
-		<p>{{ post.content }}</p>
-	{% endif %}
-</article>
-{% endfor %}
+        <p class="view"><a href="https://github.com/ly2513">View My GitHub Profile</a></p>
 
-<!-- start pagination  -->
-<div class="nav pagenav">
-	<ul class='pagination pagination-sm'>
-		{% if paginator.previous_page %}
-		<li>
-			{% if paginator.previous_page == 1 %}
-			<a href="/">上一页</a>
-			{% else %}
-			<a href="/page{{ paginator.previous_page }}">上一页</a>
-			{% endif %}
-		</li>
-		{% else %}
-		<li class="disabled">
-			<a href="javascript:;">上一页</a>
-		</li>
-		{% endif %}
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-		{% for pageNum in (1..paginator.total_pages) %}
-		{% if pageNum == 1 %}
-		{% if paginator.page == 1 %}
-		<li class='active'>
-			<a href="javascript:;">1</a>
-		</li>
-		{% else %}
-		<li>
-			<a href="/">1</a>
-		</li>
-		{% endif %}
-		{% elsif pageNum == paginator.total_pages %}
-		{% if paginator.page == paginator.total_pages %}
-		<li class='active'>
-			<a href="javascript:;">{{ paginator.page }}</a>
-		</li>
-		{% else %}
-		<li>
-			<a href="/page{{ paginator.total_pages }}">{{ paginator.total_pages }}</a>
-		</li>
-		{% endif %}
-		{% else %}
-		{% if paginator.previous_page == pageNum %}
-		{% if paginator.previous_page != 2 %}
-		<li class="disabled">
-			<a href="javascript:;">...</a>
-		</li>
-		{% endif %}
-		<li>
-			<a href="/page{{ pageNum }}">{{ pageNum }}</a>
-		</li>
-		{% endif %}
-		{% if paginator.page == pageNum %}
-		<li class='active'>
-			<a href="/page{{ pageNum }}">{{ pageNum }}</a>
-		</li>
-		{% endif %}
-		{% if paginator.next_page == pageNum %}
-		<li>
-			<a href="/page{{ pageNum }}">{{ pageNum }}</a>
-		</li>
-		{% if forloop.rindex != 2 %}
-		<li class="disabled">
-			<a href="javascript:;">...</a>
-		</li>
-		{% endif %}
-		{% assign nnPage = nil %}
-		{% assign ppPage = nil %}
-		{% endif %}
-		{% endif %}
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-		{% endfor %}
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-		{% if paginator.next_page %}
-		<li>
-			<a href="/page{{ paginator.next_page }}">下一页</a>
-		</li>
-		{% else %}
-		<li class="disabled">
-			<a href="javascript:;">下一页</a>
-		</li>
-		{% endif %}
-	</ul>
-</div> <!-- end pagination -->
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
